# rust-matrix-multiply

./: Cargo.toml  README.md
benches/: bench_dot.rs  bench_matrix_mul_cpu.rs
src/: lib.rs  main.rs  matrix.rs
src/backends/: backend.rs  cpu.rs  cpu_naive.rs  gpu.rs  mod.rs
